--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DATABASE_URL=
 NEXTAUTH_SECRET=
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=1043168313088-i2mgb7mtfn4h239685hvraj7vbbvv8vg.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 UPLOADTHING_SECRET=
 UPLOADTHING_APP_ID=
